Scrollbar fix

--- a/Win_7/widgets/_scrollbar.scss
+++ b/Win_7/widgets/_scrollbar.scss
@@ -49,7 +49,7 @@
         &:hover {
           border-color: gtkshade($selected_bg_color, 0.7);
           background-color: gtkshade($bg_color, 0.6);
-          background: url("assets/handle-horiz-hover.png") no-repeat center center linear-gradient(to bottom, gtkshade($selected_bg_color, 1.12), $selected_bg_color 50%, gtkshade($selected_bg_color, 0.95) 51%);
+          background: url("assets/handle-horiz-hover.png") no-repeat center center, linear-gradient(to bottom, gtkshade($selected_bg_color, 1.12), $selected_bg_color 50%, gtkshade($selected_bg_color, 0.95) 51%);
 
           &:active {
             border-color: gtkshade($selected_bg_color, 0.6);
